--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -21,7 +21,7 @@
     position: relative;
     width: 100%;
     height: 85vh;
-    max-height: 750px;
+    max-height: 730px;
 }
 
 .map-container {
